# pmpp_cuda

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cu  perf_test_analyzer.cpp  perf_test_analyzer.h  plot.cpp  plot.h
best_practices_nvidia/mat_transpose/: perf_test.cu  perf_test.cuh  tranpose_test.cu  trans_impl_naive.cuh  trans_impl_sm.cuh  trans_impl_sm_no_bank_conflict.cuh  trans_impl_sm_swizzling.cuh  transpose.cu  transpose.cuh  unit_test.cu
best_practices_nvidia/mem_optim/: copy_execute_latency.cu  copy_execute_latency.cuh  mem_bandwidth.cu  mem_bandwidth.cuh
bpnv/mat_transpose/: perf_test.cu  perf_test.cuh  trans_impl_naive.cuh  trans_impl_sm.cuh  trans_impl_sm_padding.cuh  trans_impl_sm_swizzling.cuh  trans_impl_strategy.cuh  transpose.cuh  unit_test.cu
bpnv/mem_optim/: copy_execute_latency.cu  copy_execute_latency.cuh  mem_bandwidth.cu  mem_bandwidth.cuh
cpp/: eigen_utils.h  eigen_utils_test.cpp  host_timer.cpp  host_timer.h  vec_add.cpp
cuda/: check_error.cu  check_error.cuh  conv.cu  conv.cuh  conv_1d.cu  conv_1d_test.cpp  conv_2d.cu  conv_2d.cuh  conv_2d_test.cpp  conv_test.cpp  dev_config.cu  dev_config.cuh  exec_config.cuh  histogram.cu  histogram.cuh  histogram_test.cpp  mat_mul.cu  mat_mul.cuh  mat_mul_cuda_test.cpp  stencil_1d.cu  stencil_1d.cuh  stencil_1d_test.cpp  stencil_2d.cu  stencil_2d.cuh  stencil_2d_test.cpp  vec_add.cu  vec_add.cuh  vec_add_cuda_test.cpp
cuda/02_vec_add/: vec_add.cu  vec_add_cuda_test.cpp
cuda/07_convolution/: conv_1d_test.cpp  conv_2d.cu  conv_2d_test.cpp
cuda/08_stencil/: stencil_1d.cuh  stencil_2d.cu  stencil_2d_test.cpp
cuda/09_histogram/: histogram.cuh  histogram_test.cpp
cuda/10_reduction/: sum.cu  sum.cuh  sum_test.cpp
cuda/utils/: exec_config.cuh  timer.cu  timer.cuh
pmpp/02_vec_add/: vec_add.cpp  vec_add.cu  vec_add.cuh  vec_add.h  vec_add_cublas.cuh  vec_add_cuda_test.cpp  vec_add_impl_strategy.cuh  vec_add_naive.cuh  vec_add_test.cpp  vec_add_test.cu
pmpp/03_05_06_mat_mul/: mat_mul.cu  mat_mul.cuh  mat_mul_cublas.cuh  mat_mul_cuda_test.cpp  mat_mul_impl.cuh  mat_mul_impl_strategy.cuh  mat_mul_naive.cuh  mat_mul_test.cu  mat_mul_tiled.cuh  sq_mat_mul_tiled_dynamic_sm.cuh  sq_mat_mul_tiled_static_sm.cuh
pmpp/03_color_gray_scale/: color_gray_scale.cu  color_gray_scale.cuh
pmpp/07_convolution/: conv_1d.cu  conv_1d.cuh  conv_1d_test.cpp  conv_2d.cu  conv_2d.cuh  conv_2d_test.cpp
pmpp/08_stencil/: stencil_1d.cu  stencil_1d.cuh  stencil_1d_test.cpp  stencil_2d.cu  stencil_2d.cuh  stencil_2d_test.cpp
pmpp/09_histogram/: histogram.cu  histogram.cuh  histogram_test.cpp
pmpp/10_reduction/: sum.cu  sum.cuh  sum_test.cpp
pmpp/11_scan/: cum_sum_dev.cu  cum_sum_dev.cuh  cum_sum_dev_test.cu  cum_sum_host.cpp  cum_sum_host.h  cum_sum_host_test.cpp
pmpp/utils/: dev_timer.cu  dev_timer.cuh  dev_vector.cu  dev_vector.cuh  dev_vector_factory.cuh  dlib_utils.cuh  eigen_utils.h  eigen_utils_test.cpp  host_timer.cpp  perf.cuh
utils/: check_error.cu  check_error.cuh  dev_config.cu  dev_config.cuh  dev_timer.cu  dev_timer.cuh  dev_vec_async_unit_test.cu  dev_vector.cuh  dev_vector_async.cuh  dev_vector_factory.cuh  dev_vector_unit_test.cu  dlib_utils.cuh  exec_config.cuh  host_dev_copy.cuh  host_timer.cpp  host_timer.h  mapped_vec.cuh  mapped_vector.cuh  perf.cuh  pinned_host_vector.cuh  pinned_vec.cuh  pinned_vector.cuh  stream_adaptor.cuh
